fixed remember me and forgot password spacing

--- a/css/logInStyles.css
+++ b/css/logInStyles.css
@@ -91,7 +91,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: -20px;
   }
   
   .forgotpsd {
